--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
            Coming soon
             </h2>
-            <h2 class="chakra-heading css-h9ooyc" style="color: white;">
+            <h2 class="chakra-heading css-h9ooyc" style="color: white;  margin-top: 20px;">
 
               Snapshot for all wallet holders have been taken and we want to make sure no one is left out of the migration process 
 All holders are to confirm their snapshot on the portal before the migration begins , anyone that is missed out can reach out to the team or open a ticket and will be attended to .
