--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 All holders are to confirm their snapshot on the portal before the migration begins , anyone that is missed out can reach out to the team or open a ticket and will be attended to .
             </h2>
           
-            <button class="connectButton" style="background-color: #D13018; color: white; padding: 16px 32px; border-radius: 4px; font-size: 16px; margin-top: 20px;">confirm snapsho</button>
+            <button class="connectButton" style="background-color: #D13018; color: white; padding: 32px 64px; border-radius: 4px; font-size: 32px; margin-top: 20px;">confirm snapshot</button>
 
           </div>
         
